--- a/src/project/TodoList.css
+++ b/src/project/TodoList.css
@@ -1,72 +1,21 @@
-.todoList-container {
+.main-container {
   display: flex;
   height: 100vh;
   font-family: Arial, sans-serif;
-  background: #f0f4f8;
-}
-
-.todoList-wrapper {
+  background: #0d6cca;
+  align-items: center;
   display: flex;
-  justify-content: center;
-  flex: 1;
-  margin-top: 20px;
-}
 
-.todoList-card {
-  background: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
   padding: 20px;
   border-radius: 10px;
   width: 300px;
   border: 1px solid #ccc;
   height: fit-content;
+  flex-direction: column;
+  h1{
+color: rgb(7, 3, 245);
+}
 }
 
-.todoList-title {
-  margin-left: 10vh;
-}
-
-.todoList-inputWrapper {
-  display: flex;
-}
-
-.todoList-input {
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  width: 29vh;
-}
-
-.todoList-btnWrapper {
-  padding-left: 8px;
-}
-
-.todoList-addBtn {
-  width: 8vh;
-  height: 5vh;
-  padding: 8px 12px;
-  border: none;
-  background: rgb(27, 52, 196);
-  color: white;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
-
-.todoList-addBtn:hover {
-  background: #39438a;
-}
-
-.todoList-ul {
-  list-style: none;
-  padding: 0;
-  margin-top: 15px;
-}
-
-.todoList-li {
-  background: #f9f9f9;
-  padding: 8px;
-  margin: 5px 0;
-  border-radius: 5px;
-  border: 1px solid #ddd;
-}
